--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/ici/Documents/카카오톡 받은 파일/mysql-connector-java-8.0.28.jar"/>
+	<classpathentry kind="lib" path="C:/FileIO/JSplashScreen.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
